--- a/RandomNumber/Resources/styles.css
+++ b/RandomNumber/Resources/styles.css
@@ -1,5 +1,6 @@
 ^contentpage {
     background-color: black;
+    padding: 10;
 }
 
 .lista_klas {
@@ -7,13 +8,7 @@
     gap: 5;
 }
 
-.klasa_w_liscie {
-    margin-top: 5;
-    background-color: rgb(15, 15, 15);
-    color: white;
-    text-align: center;
-    font-size: 25;
-}
+
 
 .lista_uczniow{
     background-color: black;
@@ -25,6 +20,19 @@
     color: white;
     text-align: center;
     font-size: 25;
+}
+
+.button{
+    background-color: #001429;
+}
+
+#klasa_w_liscie {
+    margin-top: 5;
+    background-color: rgb(15, 15, 15);
+    color: white;
+    text-align: center;
+    font-size: 25;
+    border-radius: 10;
 }
 
 #ClassDetailsPage{
