--- a/RandomNumber/Views/MainPage.xaml
+++ b/RandomNumber/Views/MainPage.xaml
@@ -9,12 +9,14 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Label Text="{Binding}" StyleClass="klasa_w_liscie"/>
+                        <Label Text="{Binding}" StyleId="klasa_w_liscie"/>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-
-        <Button Text="Dodaj Klasę" Clicked="OnAddClassClicked" />
+        <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Spacing="10">
+            <Button StyleClass="button" Text="Dodaj Klasę" Clicked="OnAddClassClicked" />
+            <Button StyleClass="button" Text="Usuń Klasę" Clicked="OnDeleteClassClicked" />
+        </StackLayout>
     </StackLayout>
 </ContentPage>
